rss button spacing fix

--- a/astro/src/scss/components/_archive-page.scss
+++ b/astro/src/scss/components/_archive-page.scss
@@ -25,7 +25,7 @@
     }
 
     &__rss {
-        margin-block-start: 4rem;
+        margin-block-start: 2rem;
     }
 
 }
